--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-nested": "^7.0.2",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
@@ -15,8 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "three": "^0.173.0",
-    "typescript": "^4.9.5"
+    "three": "^0.173.0"
   },
   "name": "mjf-qoute-app-main",
   "version": "1.0.0",
